# serializer version: 1
# name: test_images[captur_fuel][image.reg_captur_fuel_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_captur_fuel_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1capturfuelvin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[captur_fuel][image.reg_captur_fuel_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_captur_fuel_vehicle_image?token=1',
      'friendly_name': 'REG-CAPTUR-FUEL Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_captur_fuel_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_images[captur_phev][image.reg_captur_phev_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_captur_phev_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1capturphevvin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[captur_phev][image.reg_captur_phev_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_captur_phev_vehicle_image?token=1',
      'friendly_name': 'REG-CAPTUR_PHEV Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_captur_phev_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_images[megane_e_tech][image.reg_meg_0_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_meg_0_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1meganeetechvin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[megane_e_tech][image.reg_meg_0_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_meg_0_vehicle_image?token=1',
      'friendly_name': 'REG-MEG-0 Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_meg_0_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_images[twingo_3_electric][image.reg_twingo_iii_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_twingo_iii_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1twingoiiivin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[twingo_3_electric][image.reg_twingo_iii_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_twingo_iii_vehicle_image?token=1',
      'friendly_name': 'REG-TWINGO-III Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_twingo_iii_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_images[zoe_40][image.reg_zoe_40_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_zoe_40_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1zoe40vin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[zoe_40][image.reg_zoe_40_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_zoe_40_vehicle_image?token=1',
      'friendly_name': 'REG-ZOE-40 Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_zoe_40_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
# name: test_images[zoe_50][image.reg_zoe_50_vehicle_image-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'image',
    'entity_category': None,
    'entity_id': 'image.reg_zoe_50_vehicle_image',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vehicle image',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vehicle image',
    'platform': 'renault',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vehicle_image',
    'unique_id': 'vf1zoe50vin_vehicle_image',
    'unit_of_measurement': None,
  })
# ---
# name: test_images[zoe_50][image.reg_zoe_50_vehicle_image-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'access_token': '1',
      'entity_picture': '/api/image_proxy/image.reg_zoe_50_vehicle_image?token=1',
      'friendly_name': 'REG-ZOE-50 Vehicle image',
    }),
    'context': <ANY>,
    'entity_id': 'image.reg_zoe_50_vehicle_image',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-01-01T00:00:00+00:00',
  })
# ---
